--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -4,19 +4,19 @@
     <div class="description">
       <div class="time-unit">
         <p #days></p>
-        <p>Dias</p>
+        <p class="time-label">Dias</p>
       </div>
       <div class="time-unit">
         <p #hours></p>
-        <p>Horas</p>
+        <p class="time-label">Horas</p>
       </div>
       <div class="time-unit">
         <p #minutes></p>
-        <p>Minutos</p>
+        <p class="time-label">Minutos</p>
       </div>
       <div class="time-unit">
         <p #seconds></p>
-        <p>Segundos</p>
+        <p class="time-label">Segundos</p>
       </div>
     </div>
   </div>
