--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -41,19 +41,19 @@
     </div> -->
   </div>
   <div class="mobileMenu" *ngIf="showMobileMenu">
-    <a class="active" (click)="navigateToSection('ceremonia')">
+    <a class="mobile-menu-link" (click)="navigateToSection('ceremonia')">
       <span class="text">Ceremonia</span>
       <img class="icon" src="../../assets/images/wedding-rings.png"  alt="Ceremonia"/>
     </a>
-    <a (click)="navigateToSection('hospedaje')">
+    <a class="mobile-menu-link" (click)="navigateToSection('hospedaje')">
       <span class="text">Hospedaje</span>
       <img class="icon" src="../../assets/images/hotel.png" alt="Hospedaje"/>
     </a>
-    <a (click)="navigateToSection('rsvp')">
+    <a class="mobile-menu-link" (click)="navigateToSection('rsvp')">
       <span class="text">RSVP</span>
       <img class="icon" src="../../assets/images/rsvp.png" alt="RSVP" />
     </a>
-    <a (click)="navigateToSection('mesaRegalo')">
+    <a class="mobile-menu-link" (click)="navigateToSection('mesaRegalo')">
       <span class="text">Mesa de Regalo</span>
       <img class="icon" src="../../assets/images/gift.png" alt="Mesa de Regalo"/>
     </a>
