--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,9 +1,9 @@
 <section class="cd-timeline js-cd-timeline">
-  <span>
+  <!-- <span>
     {{ innerHeight }} {{ firstPosition }} {{ firstPosition - innerHeight }}
     {{ windowScroll | number : "1.0-0" }}
     {{ scrollerHeight | number : "1.0-0" }}
-  </span>
+  </span> -->
   <div class="container max-width-lg cd-timeline__container" #firstElement>
     <div class="time-line" [style]="{ height: scrollerHeight + 'px' }"></div>
     <div></div>
