--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -3,6 +3,7 @@
   nav {
     bottom: 0;
     padding: 0px 15px 0px 15px;
+    height: 60px;
   }
   .text {
     display: none !important;
@@ -20,6 +21,7 @@
   nav {
     bottom: 0;
     padding: 0px 15px 0px 15px;
+    height: 50px;
   }
   .background-overlay {
     background-position: center center;
@@ -33,6 +35,7 @@
 @media only screen and (min-width: 768px) {
   nav {
     top: 0;
+    height: 50px;
   }
   .background-overlay {
     background-position: center center;
@@ -50,6 +53,7 @@
 @media only screen and (min-width: 889px) {
   nav {
     top: 0;
+    height: 50px;
   }
   .sticky{
     top: 0 !important;
@@ -60,13 +64,13 @@
 @media only screen and (min-width: 1200px) {
   nav {
     top: 0;
+    height: 50px;
   }
 }
 
 nav {
   width: 100%;
   background-color: rgba(5, 10, 48);
-  height: 50px;
   padding: 0px 30px 0px 30px;
   display: flex;
   justify-content: center;
@@ -118,6 +122,12 @@ a:hover {
   height: 40px;
   gap: 10px;
   color: #b5a642;
+}
+
+.mobile-menu-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .icon {
