--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
     position: relative;
     height: 100%;
     font-family: "Poppins-Medium", sans-serif;
-    background-image: url("assets/images/decoback.png");
+    background-image: url("assets/images/texturaazulcasiinvisible.png");
     background-size: 100%;
     background-repeat: repeat;
     background-attachment: fixed;
@@ -18,7 +18,6 @@
   }
 
 html, body { height: 100%;scroll-behavior: smooth; }
-/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
 @font-face {
   font-family: 'DancingScript';
