analytics and styles

--- a/src/app/hotel-card/hotel-card.component.html
+++ b/src/app/hotel-card/hotel-card.component.html
@@ -1,23 +1,21 @@
 <div class="hotel-container">
   <div class="wrapper" *ngIf="hotel">
-    <div
-      class="box1"
-    >
+    <div class="box1">
       <div class="row">
         <div class="column">
           <div class="info">
             <div class="hotel-img-container">
               <img
-                mat-card-image
+
                 class="hotel-logo"
                 [src]="'../../assets/images/' + hotel.logo"
                 alt="Holiday Inn Express & Suites"
               />
             </div>
-            <h3>Holiday Inn Tanarah</h3>
+            <h3 class="nombre-hotel">{{ hotel.nombre }}</h3>
           </div>
           <img
-            mat-card-image
+
             class="hotel-img demo-bg"
             [src]="'../../assets/images/' + hotel.imagenExterior"
             alt="JW Marriot"
@@ -37,12 +35,16 @@
 
             <p class="telefono">{{ hotel.telefono }}</p>
             <p class="direccion">{{ hotel.direccion }}</p>
-            <button mat-raised-button color="accent" (click)="goToHotel(hotel.url)">
+            <button
+              mat-raised-button
+              color="accent"
+              (click)="goToHotel(hotel.url)"
+            >
               Reservar
             </button>
           </div>
           <img
-            mat-card-image
+
             class="hotel-img demo-bg"
             [src]="'../../assets/images/' + hotel.imagenHabitacion"
             alt="JW Marriot"
