--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -21,7 +21,7 @@
           <mat-select (selectionChange)="invitadoSeleccionado($event)">
             <mat-option
               *ngFor="let invitado of invitadosData"
-              [value]="invitado.id"
+              [value]="invitado.key"
             >
               {{ invitado.nombre }}
             </mat-option>
