--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,5 @@
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 290) {
-  .ceremonia {
-    padding: 0;
-  }
   .heading-title {
     font-size: 20px;
   }
@@ -20,16 +17,6 @@
 }
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 595px) {
-  .background-overlay {
-    background-position: center center;
-    width: 115%;
-  }
-  .ceremonia-content-item {
-    width: 100%;
-  }
-  .heading-title {
-    font-size: 30px;
-  }
   .item {
     padding-left: 20px;
     padding-right: 20px;
@@ -45,18 +32,8 @@
 
 /* Small screen devices (600px and below) */
 @media only screen and (max-width: 600px) {
-  .background-overlay {
-    background-position: center center;
-    width: 115%;
-  }
   .row {
     flex-direction: column !important;
-  }
-  .ceremonia-content-item {
-    width: 100%;
-  }
-  .heading-title {
-    font-size: 40px;
   }
   .item {
     padding-left: 30px;
@@ -67,19 +44,17 @@
     margin-bottom: 20px;
   }
 }
+@media (620px <= width <= 920px) {
+  .hoteles .row {
+    flex-wrap: wrap;
+    column-gap: 20px;
+  }
+  .hoteles .row .column {
+    flex-basis: 45%;
+  }
+}
 /* Medium screen devices (768px and above) */
 @media only screen and (min-width: 700px) {
-  .background-overlay {
-    background-position: center center;
-    width: 100%;
-  }
-  .populated {
-    align-content: flex-end;
-    align-items: flex-end;
-  }
-  .heading-title {
-    font-size: 50px;
-  }
   .item {
     padding-left: 40px;
     padding-right: 40px;
@@ -92,18 +67,6 @@
 
 /* Big screen devices (889px and above) */
 @media only screen and (min-width: 889px) {
-  .background-overlay {
-    background-position: 0px 0px;
-    width: 100%;
-    background-position: bottom;
-  }
-  .populated {
-    align-content: center;
-    align-items: center;
-  }
-  .heading-title {
-    font-size: 60px;
-  }
   .item {
     padding-left: 50px;
     padding-right: 50px;
@@ -118,90 +81,11 @@
 @media only screen and (min-width: 1200px) {
 }
 
-/* SPLASH */
-
-.splash {
-  clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
-  overflow: hidden;
-  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0em 0em 0em 0em;
-}
-
-.background-overlay {
-  box-sizing: border-box;
-  /* width: 115%; */
-  position: fixed;
-  /* top: -90px; */
-  left: 0;
-  height: 100vh;
-  pointer-events: none;
-  background-image: url("../../assets/images/VYC1.jpg ");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 1;
-  transition: background 0.4s, border-radius 0.4s, opacity 0.4s;
-}
-
-.no-gap {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: auto;
-  margin-left: auto;
-  position: relative;
-  flex-wrap: wrap;
-  min-height: 100vh;
-}
-
-.column-el {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 1px;
-}
-
-.populated {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  justify-content: flex-end;
-  margin: 0px 0px 0px 0px;
-  --e-column-margin-right: 0px;
-  --e-column-margin-left: 0px;
-  padding: 0px 0px 120px 0px;
-}
-.heading {
-  text-align: center;
-  margin-bottom: 15px;
-  width: 100%;
-  position: relative;
-  -webkit-box-orient: vertical;
-}
-.heading-title {
-  text-align: center;
-  color: #ffffff;
-  font-family: "DancingScript", belleza;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.62);
-  line-height: 1.1;
-  margin: 0;
-  padding: 0;
-  font-weight: 400;
-  padding: 0;
-  margin: 0;
-  line-height: 1;
-}
-
 /* Main CSS */
 .container {
   margin: 0 auto;
   text-align: center;
 }
-
 .container ul li {
   list-style: none;
   margin: 0 10px;
@@ -237,6 +121,7 @@
 
 .section-header {
   color: white;
+  font-family: Cinzel;
 }
 
 .row {
@@ -252,11 +137,6 @@
   margin-bottom: 5px;
   margin-left: 5px;
   margin-right: 5px;
-}
-
-mat-card {
-  min-width: 50%;
-  min-height: 50%;
 }
 
 .contador-item {
@@ -284,62 +164,15 @@ mat-card {
   padding-bottom: 40px;
 }
 
-.ceremonia-content {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  border-radius: 10px;
-  width: 100%;
-  color: white;
-}
-
-.ceremonia-icon {
-  width: 100px;
-}
-.ceremonia-header {
-  padding-bottom: 2em;
-}
-.ceremonia-misa {
-  padding-bottom: 5em;
-}
-.ceremonia-recepcion {
-  padding-bottom: 2em;
-}
-.vestimenta-icon {
-  width: 150px;
-  filter: saturate(500%) contrast(800%) brightness(500%) invert(80%) sepia(50%)
-    hue-rotate(120deg);
-}
-.nota-importante {
-  background: rgba(181, 166, 66, 0.9);
-  border-radius: 5px;
-  margin-bottom: -200px;
-  flex-basis: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.nota-importante h3 {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-.nota-importante p {
-  padding: 20px 30px 20px 30px;
-}
-.nota-importante hr {
-  width: 80%;
-  border: 2px solid black;
-  border-radius: 5px;
-}
 .hoteles {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   padding: 2em 0;
+}
+.hoteles .row .column {
+  margin-left: 0;
 }
 .hotel-logo {
   width: 100%;
@@ -396,53 +229,4 @@ mat-card {
 }
 .parallax3 {
   background-image: url("../../assets/images/VYC4.jpg");
-}
-
-#myVideo {
-  min-height: 500px;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.box1,
-.box2 {
-  width: 100px;
-  height: 100px;
-  border: 1px solid black;
-  text-align: center;
-  position: absolute;
-  transition: 600ms ease;;
-}
-
-.box1 {
-  opacity: 1;
-  visibility: visible;
-  background-color: red;
-}
-
-.box2 {
-  opacity: 0;
-  visibility: hidden;
-  background-color: green;
-}
-
-.wrapper {
-  width: auto;
-  display: inline-block;
-}
-
-.wrapper:hover .box1 {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.wrapper:hover .box2 {
-  opacity: 1;
-  visibility: visible;
 }
