--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,4 @@
-<section class="splash" >
-  <div class="background-overlay"></div>
-  <div class="no-gap">
-    <div class="column-el">
-      <div class="populated">
-        <div class="heading" data-aos="fade-up" data-aos-duration="3000">
-          <div class="widget-container">
-            <h1 class="heading-title">Violeta & Carlos</h1>
-          </div>
-        </div>
-        <div
-          class="widget widget-heading"
-          data-aos="fade-up"
-          data-aos-duration="3000"
-        >
-          <h3 class="heading-title size-default">- SAVE THE DATE -</h3>
-        </div>
-        <div data-aos="fade-up" data-aos-duration="3000">
-          <h3 class="heading-title size-default">
-            Sábado, 23 de Septiembre 2023.
-          </h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-landing></app-landing>
 
 <app-navigation></app-navigation>
 
@@ -67,201 +42,16 @@
     </div>
   </div>
   <div id="ceremonia" class="item container ceremonia-container">
-    <div class="section-header">
-      <h2>Ceremonia</h2>
-    </div>
-    <div class="ceremonia">
-      <div class="row">
-        <div class="ceremonia-content">
-          <div class="row">
-            <app-timeline class="column"></app-timeline>
-          </div>
-        </div>
-      </div>
-      <div class="section-header">
-        <h3>Código de vestimenta</h3>
-        <p>Etiqueta</p>
-      </div>
-      <div class="row">
-        <div class="ceremonia-content">
-          <div class="row">
-            <div class="column ceremonia-content-item">
-              <img
-                data-aos="zoom-in"
-                data-aos-duration="3000"
-                class="vestimenta-icon"
-                src="../../assets/images/codigo-hombre.png"
-              />
-              <p>Traje o Esmoquin</p>
-            </div>
-            <div class="column ceremonia-content-item">
-              <img
-                data-aos="zoom-in"
-                data-aos-duration="3000"
-                class="vestimenta-icon"
-                src="../../assets/images/codigo-mujer.png"
-              />
-              <p>Vestido Largo</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="column nota-importante">
-              <h3>SÓLO ADULTOS</h3>
-              <hr />
-              <p>
-                Adoramos a sus hijos, pero creemos que necesitan una noche
-                libre.
-              </p>
-              <p>Sólo adultos, por favor.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-ceremonia></app-ceremonia>
   </div>
+
   <div class="parallax parallax1"></div>
+
   <div id="hospedaje" class="item container hospedaje-container">
     <div class="section-header">
       <h2>Hospedaje</h2>
     </div>
-    <!-- <div class="hoteles">
-      <div class="row">
-        <div class="column">
-          <mat-card
-            (mouseover)="toggleHover('jw')"
-            (mouseleave)="removeHover()"
-          >
-            <img
-              mat-card-image
-              class="hotel-logo"
-              src="../../assets/images/JWMarriott.svg.png"
-              alt="JW Marriot"
-            />
-            <mat-card-content>
-              <h3>JW Marriot</h3>
-              <small>Contamos con descuentos de hospedaje</small>
-            </mat-card-content>
-            <mat-card-actions *ngIf="hoveredElement === 'jw'">
-              <div class="hotel-hidden-content">
-                <p>aqui ponemos cual es el numero para el descuento</p>
-                <p>aqui va la direccion</p>
-                <button mat-raised-button color="primary">
-                  boton que te lleva al hotel
-                </button>
-                <img
-                  mat-card-image
-                  class="hotel-img"
-                  src="../../assets/images/jw-marriott.jpg"
-                  alt="JW Marriot"
-                />
-              </div>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-        <div class="column">
-          <mat-card
-            (mouseover)="toggleHover('westin')"
-            (mouseleave)="removeHover()"
-          >
-            <img
-              mat-card-image
-              class="hotel-logo"
-              src="../../assets/images/westinlogo.png"
-              alt="JW Marriot"
-            />
-            <mat-card-content>
-              <h3>Westin</h3>
-              <small>Contamos con descuentos de hospedaje</small>
-            </mat-card-content>
-            <mat-card-actions *ngIf="hoveredElement === 'westin'">
-              <div class="hotel-hidden-content">
-                <p>aqui ponemos cual es el numero para el descuento</p>
-                <p>aqui va la direccion</p>
-                <button mat-raised-button>boton que te lleva al hotel</button>
-                <img
-                  mat-card-image
-                  class="hotel-img"
-                  src="../../assets/images/westin-monterey.jpg"
-                  alt="JW Marriot"
-                />
-              </div>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-        <div class="column">
-          <mat-card
-            (mouseover)="toggleHover('nh')"
-            (mouseleave)="removeHover()"
-          >
-            <img
-              mat-card-image
-              class="hotel-logo"
-              src="../../assets/images/nhlogo.png"
-              alt="Hotel NH Logo"
-            />
-            <mat-card-content>
-              <h3>Hotel NH</h3>
-              <small
-                >Como opcion alterna te sugerimos el hotel por su
-                cercania.</small
-              >
-            </mat-card-content>
-            <mat-card-actions *ngIf="hoveredElement === 'nh'">
-              <div class="hotel-hidden-content">
-                <p>aqui ponemos cual es el numero para el descuento</p>
-                <p>aqui va la direccion</p>
-                <button mat-raised-button color="primary">
-                  boton que te lleva al hotel
-                </button>
-                <img
-                  mat-card-image
-                  class="hotel-img"
-                  src="../../assets/images/hotel-nh.jpg"
-                  alt="JW Marriot"
-                />
-              </div>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-        <div class="column">
-          <mat-card
-            (mouseover)="toggleHover('holiday')"
-            (mouseleave)="removeHover()"
-          >
-            <div class="hotel-img-container">
-              <img
-                mat-card-image
-                class="hotel-logo"
-                src="../../assets/images/holidayinnlogo.png"
-                alt="Holiday Inn Express & Suites"
-              />
-            </div>
-            <mat-card-content>
-              <h3>Holiday Inn Tanarah</h3>
-              <small
-                >Como opcion alterna te sugerimos el hotel por su
-                cercania.</small
-              >
-            </mat-card-content>
-            <mat-card-actions *ngIf="hoveredElement === 'holiday'">
-              <div class="hotel-hidden-content">
-                <p>aqui ponemos cual es el numero para el descuento</p>
-                <p>aqui va la direccion</p>
-                <button mat-raised-button color="primary">
-                  boton que te lleva al hotel
-                </button>
-                <img
-                  mat-card-image
-                  class="hotel-img"
-                  src="../../assets/images/holiday-inn-express.jpg"
-                  alt="JW Marriot"
-                />
-              </div>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-      </div>
-    </div> -->
+
     <div class="hoteles">
       <div class="row">
         <div class="column" *ngFor="let hotel of hoteles">
@@ -270,7 +60,9 @@
       </div>
     </div>
   </div>
+
   <div class="parallax parallax2"></div>
+
   <div id="mesaRegalo" class="item container mesa-container">
     <div class="section-header">
       <h2>Mesa de regalos</h2>
