--- a/src/app/hotel-card/hotel-card.component.css
+++ b/src/app/hotel-card/hotel-card.component.css
@@ -1,9 +1,92 @@
 /* For extremely small screen devices (595px and below) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 280px) {
   .hotel-container {
     margin: 0 10px;
     width: 100%;
-    height: 400px;
+    height: 340px;
+  }
+  .box1,
+  .box2 {
+    width: 80%;
+    min-height: 50%;
+    font-size: x-small;
+  }
+  .column {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+@media (280px <= width <= 320px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: 100%;
+    height: 340px;
+  }
+  .box1,
+  .box2 {
+    width: 80%;
+    min-height: 50%;
+    font-size: x-small;
+  }
+  .column {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+@media (320px <= width <= 360px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: 100%;
+    height: 350px;
+  }
+  .box1,
+  .box2 {
+    width: 80%;
+    min-height: 50%;
+    font-size: x-small;
+  }
+  .column {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+@media (360px <= width <= 380px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: 100%;
+    height: 380px;
+  }
+  .box1,
+  .box2 {
+    width: 80%;
+    min-height: 50%;
+  }
+  .column {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+@media (380px <= width <= 400px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: 100%;
+    height: 450px;
+  }
+  .box1,
+  .box2 {
+    width: 80%;
+    min-height: 50%;
+  }
+  .column {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+@media (400px <= width <= 620px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: 100%;
+    height: 460px;
   }
   .box1,
   .box2 {
@@ -11,7 +94,19 @@
     min-height: 50%;
   }
 }
-@media only screen and (min-width: 600px) {
+@media (620px <= width <= 920px) {
+  .hotel-container {
+    margin: 0 0px;
+    width: calc(100% / 2);
+    height: 400px;
+  }
+  .box1,
+  .box2 {
+    width: calc(80% / 2);
+    min-height: 30%;
+  }
+}
+@media only screen and (min-width: 920px) {
   .hotel-container {
     margin: 0 10px;
     width: calc(100% / 4);
@@ -20,7 +115,7 @@
   .box1,
   .box2 {
     width: calc(80% / 4);
-    min-height: 50%;
+    min-height: 30%;
   }
 }
 .box1,
@@ -52,6 +147,7 @@
 .wrapper {
   width: auto;
   display: block;
+  font-family: Poppins;
 }
 
 .wrapper:hover .box1 {
@@ -112,11 +208,15 @@
   justify-content: center;
   align-items: center;
 }
-.telefono{
+.telefono {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.direccion{
+.direccion {
   padding-top: 10px;
   padding-bottom: 30px;
+}
+.nombre-hotel {
+  font-family: Cinzel;
+  font-size: medium;
 }
